--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -38,7 +38,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Fetch all history for all tags and branches
     
@@ -408,7 +408,7 @@ jobs:
         echo "zip_paths=$zipPathsJson" >> $env:GITHUB_OUTPUT
 
     - name: Upload Build Artifacts
-      uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4
+      uses: actions/upload-artifact@v4
       with:
         name: plugin-package
         path: artifacts/
@@ -443,7 +443,7 @@ jobs:
         
     - name: Upload Windows Rhino8 Release Asset
       if: steps.determine_version.outputs.IS_RELEASE == 'true'
-      uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1
+      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -454,7 +454,7 @@ jobs:
         
     - name: Upload Mac Rhino8 Release Asset
       if: steps.determine_version.outputs.IS_RELEASE == 'true'
-      uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1
+      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
