feat(aichat): button to copy codeblocks to clipboard

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -37,7 +37,7 @@
   color: "DDA0DD"
   description: "Requires more details to proceed"
 - name: "status: needs triage"
-  color: "9E4B18"
+  color: "0E8A16"
   description: "Ready for triage"
 - name: "status: help wanted"
   color: "E9C6C2"
@@ -59,6 +59,12 @@
 - name: "component: AI TextGenerate"
   color: "000"
   description: "Issues related to the AI Text Generate component"
+- name: "component: AI ScriptEvaluate"
+  color: "000"
+  description: "Issues related to the AI Script Evaluate component"
+- name: "component: AI ScriptGenerate"
+  color: "000"
+  description: "Issues related to the AI Script Generate component"
 - name: "component: AI ListEvaluate"
   color: "000"
   description: "Issues related to the AI List Evaluate component"
