feat: add GitHub Actions workflows for badge management in main

--- a/.github/workflows/chore-version-badge.yml
+++ b/.github/workflows/chore-version-badge.yml
@@ -14,7 +14,10 @@ name: 🔄 Update Version Badge
 on:
   workflow_dispatch:
   push:
-    branches: [ main, dev ]
+    branches: 
+      - main
+      - dev
+      - release/*
     paths:
       - 'Solution.props'
 
