--- a/.github/workflows/chore-version-date.yml
+++ b/.github/workflows/chore-version-date.yml
@@ -1,7 +1,7 @@
-name: 🔄 Update Development Version Date
+name: 🔄 Update Version Date
 
-# Description: This workflow automatically updates the date component in development versions
-# when changes are pushed to development branches. It creates a PR with the updated date
+# Description: This workflow automatically updates the date component 
+# when the version includes it. It creates a PR with the updated date
 # to ensure the version reflects the latest changes.
 #
 # Triggers:
