--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -50,6 +50,12 @@
 - name: "component: GhPut"
   color: "000"
   description: "Issues related to the Grasshopper Put Components component"
+- name: "component: GhRetrieveComponents"
+  color: "000"
+  description: "Issues related to the Grasshopper Retrieve Components component"
+- name: "component: GhTidyUp"
+  color: "000"
+  description: "Issues related to the Grasshopper Tidy Up component"
 - name: "component: AI GhGenerate"
   color: "000"
   description: "Issues related to the AI Grasshopper Generate Definitions component"
