--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -65,9 +65,9 @@
 - name: "component: AI TextGenerate"
   color: "000"
   description: "Issues related to the AI Text Generate component"
-- name: "component: AI ScriptEvaluate"
+- name: "component: AI ScriptReview"
   color: "000"
-  description: "Issues related to the AI Script Evaluate component"
+  description: "Issues related to the AI Script Review component"
 - name: "component: AI ScriptGenerate"
   color: "000"
   description: "Issues related to the AI Script Generate component"
