--- a/.github/workflows/chore-version-badge.yml
+++ b/.github/workflows/chore-version-badge.yml
@@ -14,107 +14,122 @@ name: 🔄 Update Version Badge
 on:
   workflow_dispatch:
   push:
-    branches: 
+    branches:
+      - release/*
       - main
       - dev
-      - release/*
-    paths:
-      - 'Solution.props'
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  update-badge:
+  paths-check:
     runs-on: ubuntu-latest
+    outputs:
+      version_changed: ${{ steps.filter.outputs.version }}
     steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-      with:
-        fetch-depth: 0
-        ref: ${{ github.ref }}
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 0 }
+      - id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            version:
+              - Solution.props
+  update-badge:
+    needs: paths-check
+    runs-on: ubuntu-latest
+    if: >
+      startsWith(github.ref, 'refs/heads/release/') ||
+      needs.paths-check.outputs.version_changed == 'true'
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          fetch-depth: 0
+          ref: ${{ github.ref }}
 
-    - name: Configure Git
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+      - name: Configure Git
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
 
-    - name: Get target branch
-      run: |
-        TARGET_BRANCH="${{ github.ref_name }}"
-        echo "TARGET_BRANCH=$TARGET_BRANCH" >> $GITHUB_ENV
-        echo "BADGE_BRANCH=docs/update-version-badge-$TARGET_BRANCH" >> $GITHUB_ENV
+      - name: Get target branch
+        run: |
+          TARGET_BRANCH="${{ github.ref_name }}"
+          echo "TARGET_BRANCH=$TARGET_BRANCH" >> $GITHUB_ENV
+          echo "BADGE_BRANCH=docs/update-version-badge-$TARGET_BRANCH" >> $GITHUB_ENV
 
-    - name: Delete existing badge branches
-      continue-on-error: true
-      run: |
-        echo "Current branches before deletion:"
-        git branch -a
-        
-        # Delete remote branch if it exists
-        git push origin --delete ${{ env.BADGE_BRANCH }} || true
-        
-        echo "Branches after deletion:"
-        git branch -a
+      - name: Delete existing badge branches
+        continue-on-error: true
+        run: |
+          echo "Current branches before deletion:"
+          git branch -a
+          
+          # Delete remote branch if it exists
+          git push origin --delete ${{ env.BADGE_BRANCH }} || true
+          
+          echo "Branches after deletion:"
+          git branch -a
 
-    - name: Delete existing PR
-      continue-on-error: true
-      run: |
-        # Get PR number if it exists
-        PR_NUMBER=$(gh pr list --base ${{ env.TARGET_BRANCH }} --head ${{ env.BADGE_BRANCH }} --json number --jq '.[0].number')
-        if [ ! -z "$PR_NUMBER" ]; then
-          echo "Found existing PR #$PR_NUMBER, closing it"
-          gh pr close $PR_NUMBER --delete-branch
-        fi
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Delete existing PR
+        continue-on-error: true
+        run: |
+          # Get PR number if it exists
+          PR_NUMBER=$(gh pr list --base ${{ env.TARGET_BRANCH }} --head ${{ env.BADGE_BRANCH }} --json number --jq '.[0].number')
+          if [ ! -z "$PR_NUMBER" ]; then
+            echo "Found existing PR #$PR_NUMBER, closing it"
+            gh pr close $PR_NUMBER --delete-branch
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Update version badge
-      id: update-badge
-      uses: ./.github/actions/documentation/update-badges
-      with:
-        branch: ${{ github.ref_name }}
+      - name: Update version badge
+        id: update-badge
+        uses: ./.github/actions/documentation/update-badges
+        with:
+          branch: ${{ github.ref_name }}
 
-    - name: Check if badges need updating
-      id: check-badges
-      run: |
-        if [[ "${{ steps.update-badge.outputs.badges-changed }}" == "false" ]]; then
-          echo "Badges are already up to date. No changes needed."
-          echo "::notice::Badges are already up to date with the current version. Workflow execution stopped."
-          exit 0
-        else
-          echo "Badges need to be updated. Continuing workflow."
-        fi
-      shell: bash
+      - name: Check if badges need updating
+        id: check-badges
+        run: |
+          if [[ "${{ steps.update-badge.outputs.badges-changed }}" == "false" ]]; then
+            echo "Badges are already up to date. No changes needed."
+            echo "::notice::Badges are already up to date with the current version. Workflow execution stopped."
+            exit 0
+          else
+            echo "Badges need to be updated. Continuing workflow."
+          fi
+        shell: bash
 
-    - name: Create and push branch
-      if: steps.update-badge.outputs.badges-changed == 'true'
-      run: |
-        echo "Creating new branch: ${{ env.BADGE_BRANCH }}"
-        git checkout -b ${{ env.BADGE_BRANCH }}
-        
-        # Check if there are actual changes to commit
-        if [[ -n "$(git status --porcelain README.md)" ]]; then
-          echo "Changes detected in README.md, committing and pushing"
-          git add README.md
-          git commit -m "docs: update version badge for ${{ env.TARGET_BRANCH }}"
-          git push origin ${{ env.BADGE_BRANCH }}
-          echo "CHANGES_PUSHED=true" >> $GITHUB_ENV
-        else
-          echo "No actual changes detected in README.md despite badges-changed=true"
-          echo "This might indicate a parsing issue in the version-tools action"
-          echo "::warning::No changes to commit for README.md despite badges-changed=true"
-          echo "CHANGES_PUSHED=false" >> $GITHUB_ENV
-        fi
+      - name: Create and push branch
+        if: steps.update-badge.outputs.badges-changed == 'true'
+        run: |
+          echo "Creating new branch: ${{ env.BADGE_BRANCH }}"
+          git checkout -b ${{ env.BADGE_BRANCH }}
+          
+          # Check if there are actual changes to commit
+          if [[ -n "$(git status --porcelain README.md)" ]]; then
+            echo "Changes detected in README.md, committing and pushing"
+            git add README.md
+            git commit -m "docs: update version badge for ${{ env.TARGET_BRANCH }}"
+            git push origin ${{ env.BADGE_BRANCH }}
+            echo "CHANGES_PUSHED=true" >> $GITHUB_ENV
+          else
+            echo "No actual changes detected in README.md despite badges-changed=true"
+            echo "This might indicate a parsing issue in the version-tools action"
+            echo "::warning::No changes to commit for README.md despite badges-changed=true"
+            echo "CHANGES_PUSHED=false" >> $GITHUB_ENV
+          fi
 
-    - name: Create PR
-      if: steps.update-badge.outputs.badges-changed == 'true' && env.CHANGES_PUSHED == 'true'
-      run: |
-        PR_TITLE="docs: update version badge for ${{ env.TARGET_BRANCH }} to ${{ steps.update-badge.outputs.version }}"
-        PR_BODY="This PR updates the version badge in the README.md to match the current version in Solution.props.
+      - name: Create PR
+        if: steps.update-badge.outputs.badges-changed == 'true' && env.CHANGES_PUSHED == 'true'
+        run: |
+          PR_TITLE="docs: update version badge for ${{ env.TARGET_BRANCH }} to ${{ steps.update-badge.outputs.version }}"
+          PR_BODY="This PR updates the version badge in the README.md to match the current version in Solution.props.
 
-        This is an automated PR created by the Update Version Badge workflow."
-        
-        gh pr create --base ${{ env.TARGET_BRANCH }} --head ${{ env.BADGE_BRANCH }} --title "$PR_TITLE" --body "$PR_BODY"
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          This is an automated PR created by the Update Version Badge workflow."
+          
+          gh pr create --base ${{ env.TARGET_BRANCH }} --head ${{ env.BADGE_BRANCH }} --title "$PR_TITLE" --body "$PR_BODY"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
