--- a/.github/actions/code-style/action.yml
+++ b/.github/actions/code-style/action.yml
@@ -12,11 +12,17 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+    - name: Check for existing .NET SDK
+      id: check-dotnet
+      shell: bash
+      run: |
+        if dotnet --version >/dev/null 2>&1; then
+          echo "installed=true" >> $GITHUB_OUTPUT
+        else
+          echo "installed=false" >> $GITHUB_OUTPUT
+        fi
     - name: Setup .NET
+      if: ${{ steps.check-dotnet.outputs.installed == 'false' }}
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '7.0.x'
