--- a/.github/actions/code-style/action.yml
+++ b/.github/actions/code-style/action.yml
@@ -23,7 +23,7 @@ runs:
         fi
     - name: Setup .NET
       if: ${{ steps.check-dotnet.outputs.installed == 'false' }}
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '7.0.x'
     - name: Run dotnet-format
@@ -40,7 +40,7 @@ runs:
     - name: Process C# file headers
       uses: ./.github/actions/code-style/header-fixer
       with:
-        mode: ${{ inputs.mode }}
+        mode: check
     - name: Process trailing whitespace
       uses: ./.github/actions/code-style/trailing-whitespace
       with:
