--- a/.github/workflows/ci-dotnet-tests.yml
+++ b/.github/workflows/ci-dotnet-tests.yml
@@ -27,8 +27,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Check for existing .NET SDK
+        id: check-dotnet
+        shell: bash
+        run: |
+          if dotnet --version >/dev/null 2>&1; then
+            echo "installed=true" >> $GITHUB_OUTPUT
+          else
+            echo "installed=false" >> $GITHUB_OUTPUT
+          fi
+          
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        if: ${{ steps.check-dotnet.outputs.installed == 'false' }}
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '7.0.x'
 
