--- a/.github/workflows/release-4-build.yml
+++ b/.github/workflows/release-4-build.yml
@@ -114,8 +114,19 @@ jobs:
         Write-Host "This is a draft release. Skipping build and upload."
         exit 0
     
-    - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v3
+    - name: Check for existing .NET SDK
+      id: check-dotnet
+      shell: bash
+      run: |
+        if dotnet --version >/dev/null 2>&1; then
+          echo "installed=true" >> $GITHUB_OUTPUT
+        else
+          echo "installed=false" >> $GITHUB_OUTPUT
+        fi
+        
+    - name: Setup .NET
+      if: ${{ steps.check-dotnet.outputs.installed == 'false' }}
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '7.0.x'
 
