--- a/.github/actions/code-style/trailing-whitespace/action.yml
+++ b/.github/actions/code-style/trailing-whitespace/action.yml
@@ -2,7 +2,7 @@ name: "Trailing Whitespace"
 description: "Check or fix trailing whitespace and normalize line endings"
 inputs:
   mode:
-    description: "Operation mode: fix or check"
+    description: "Operation mode: fix, check, or soft-check"
     required: false
     default: "check"
 runs:
@@ -21,8 +21,13 @@ runs:
               sed -i 's/\r$//' "$file"
             else
               if grep -qE '[ \t]+$' "$file" || file "$file" | grep -q CRLF; then
-                echo "Trailing whitespace or CRLF found in $file"
-                ERR=1
+                if [ "${{ inputs.mode }}" = "soft-check" ]; then
+                  # emit a non-blocking warning
+                  echo "::warning file=$file::Trailing whitespace or CRLF found in $file (run with mode=fix to auto-fix)"
+                else
+                  echo "Trailing whitespace or CRLF found in $file"
+                  ERR=1
+                fi
               fi
             fi
           fi
