--- a/.github/workflows/release-1-milestone.yml
+++ b/.github/workflows/release-1-milestone.yml
@@ -49,6 +49,9 @@ jobs:
         with:
           action: create-release
           version: ${{ github.event.milestone.title }}
+      - name: Update README badges
+        uses: ./.github/actions/documentation/update-badges
+        id: update-badges
       # - name: Fix code style
       #   uses: ./.github/actions/code-style
       #   with:
@@ -56,7 +59,7 @@ jobs:
       #     commit: false
       - name: Commit and push changes
         run: |
-          git add Solution.props CHANGELOG.md
+          git add Solution.props CHANGELOG.md README.md
           git commit -m "chore: prepare release ${{ github.event.milestone.title }} with version update and code style fixes"
           git push origin release/${{ github.event.milestone.title }}
       - name: Create Pull Request
@@ -64,7 +67,9 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           title: "chore: prepare release ${{ github.event.milestone.title }} with version update and code style fixes"
-          body: "This PR prepares the release for version ${{ github.event.milestone.title }} with version update and code style fixes:\n\n- Fixed header code style\n- Sorted usings\n- Removed trailing whitespace\n- Updated version in Solution.props\n- Updated changelog with closed-solved issues\n\nMILESTONE DESCRIPTION:\n${{ github.event.milestone.description }}"
+          body: "This PR prepares the release for version ${{ github.event.milestone.title }} with version update and code style fixes:\n\n- Fixed header code style\n- Sorted usings\n- Removed trailing whitespace\n- Updated version in Solution.props\n- Updated changelog with closed-solved issues\n- Updated README badges\n\nMILESTONE DESCRIPTION:\n${{ github.event.milestone.description }}"
           base: dev
           branch: release/${{ github.event.milestone.title }}
+          push-to-fork: ""
+          commit-message: ""
           milestone: ${{ github.event.milestone.number }}
