--- a/.github/workflows/release-2-pr-to-dev-closed.yml
+++ b/.github/workflows/release-2-pr-to-dev-closed.yml
@@ -40,4 +40,4 @@ jobs:
           title: "${{ github.event.pull_request.head.ref }}"
           body: "${{ github.event.pull_request.body }}"
           base: main
-          branch: ${{ github.event.pull_request.base.ref }}
+          branch: dev
