--- a/.github/workflows/release-1-milestone.yml
+++ b/.github/workflows/release-1-milestone.yml
@@ -25,43 +25,16 @@ jobs:
   release-preparation:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: dev
+      # - uses: actions/checkout@v4
+      #   with:
+      #     fetch-depth: 0
+      #     ref: dev
+
       - name: Set up Git user
         run: |
           git config user.name "github-actions"
           git config user.email "action@github.com"
-      - name: Create release branch
-        run: git checkout -b release/${{ github.event.milestone.title }}
-      - name: Update version in Solution.props
-        uses: ./.github/actions/versioning/update-version
-        with:
-          new-version: ${{ github.event.milestone.title }}
-      - name: Include missing issues in changelog
-        uses: ./.github/actions/documentation/update-changelog-issues
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          days-lookback: 90
-      - name: Update changelog section
-        uses: ./.github/actions/documentation/update-changelog
-        with:
-          action: create-release
-          version: ${{ github.event.milestone.title }}
-      - name: Update README badges
-        uses: ./.github/actions/documentation/update-badges
-        id: update-badges
-      # - name: Fix code style
-      #   uses: ./.github/actions/code-style
-      #   with:
-      #     mode: fix
-      #     commit: false
-      - name: Commit and push changes
-        run: |
-          git add Solution.props CHANGELOG.md README.md
-          git commit -m "chore: prepare release ${{ github.event.milestone.title }} with version update and code style fixes"
-          git push origin release/${{ github.event.milestone.title }}
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
@@ -70,6 +43,37 @@ jobs:
           body: "This PR prepares the release for version ${{ github.event.milestone.title }} with version update and code style fixes:\n\n- Fixed header code style\n- Sorted usings\n- Removed trailing whitespace\n- Updated version in Solution.props\n- Updated changelog with closed-solved issues\n- Updated README badges\n\nMILESTONE DESCRIPTION:\n${{ github.event.milestone.description }}"
           base: dev
           branch: release/${{ github.event.milestone.title }}
-          push-to-fork: ""
-          commit-message: ""
+          draft: true
           milestone: ${{ github.event.milestone.number }}
+
+      - name: Update version in Solution.props
+        uses: ./.github/actions/versioning/update-version
+        with:
+          new-version: ${{ github.event.milestone.title }}
+
+      - name: Include missing issues in changelog
+        uses: ./.github/actions/documentation/update-changelog-issues
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          days-lookback: 90
+
+      - name: Update changelog section
+        uses: ./.github/actions/documentation/update-changelog
+        with:
+          action: create-release
+          version: ${{ github.event.milestone.title }}
+          
+      - name: Update README badges
+        uses: ./.github/actions/documentation/update-badges
+        id: update-badges
+      # - name: Fix code style
+      #   uses: ./.github/actions/code-style
+      #   with:
+      #     mode: fix
+      #     commit: false
+
+      - name: Commit and push changes
+        run: |
+          git add Solution.props CHANGELOG.md README.md
+          git commit -m "chore: prepare release ${{ github.event.milestone.title }} with version update and code style fixes"
+          git push origin release/${{ github.event.milestone.title }}
