--- a/.github/workflows/release-1-milestone.yml
+++ b/.github/workflows/release-1-milestone.yml
@@ -35,6 +35,9 @@ jobs:
           git config user.name "github-actions"
           git config user.email "action@github.com"
 
+      - name: Create release branch
+        run: git checkout -b release/${{ github.event.milestone.title }}
+
       - name: Update version in Solution.props
         uses: ./.github/actions/versioning/update-version
         with:
