--- a/.github/workflows/release-2-pr-to-dev-closed.yml
+++ b/.github/workflows/release-2-pr-to-dev-closed.yml
@@ -15,11 +15,11 @@ on:
     types: [ closed ]
     branches:
       - dev
-  workflow_call:
+  workflow_dispatch:
 
 jobs:
   create-pr-dev-to-main:
-    if: ${{ ( github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')) || github.event_name == 'workflow_call' }}
+    if: ${{ ( github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')) || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
