feat(ghget): avoid getting humanReadable filed if value is already human readable

--- a/.github/workflows/pr-update-changelog-issues.yml
+++ b/.github/workflows/pr-update-changelog-issues.yml
@@ -13,10 +13,10 @@ name: 📝 Update Changelog with Closed Issues
 # - issues:read - Required to read issue information
 
 on:
-  pull_request:
-    branches: 
-      - main
-      - dev
+  # pull_request:
+  #   branches: 
+  #     - main
+  #     - dev
   workflow_dispatch:
 
 permissions:
