--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.3.1-alpha</SolutionVersion>
+    <SolutionVersion>0.3.2-dev.250508</SolutionVersion>
   </PropertyGroup>
 </Project>
