ci: prevent fail before notifying all errors

--- a/.github/actions/code-style/header-fixer/action.yml
+++ b/.github/actions/code-style/header-fixer/action.yml
@@ -33,10 +33,6 @@ runs:
           if [ -f "$file" ]; then
             year=$(grep -m1 '^ \* Copyright' "$file" | grep -oE '[0-9]{4}')
             [ -z "$year" ] && year=$(date +%Y)
-            # If in fix mode, always use the current year
-            if [ "${{ inputs.mode }}" = "fix" ]; then
-              year=$(date +%Y)
-            fi
             
             # Create header template
             HEADER="/*\n * SmartHopper - AI-powered Grasshopper Plugin\n * Copyright (C) $year Marc Roca Musach\n *\n * This library is free software; you can redistribute it and/or\n * modify it under the terms of the GNU Lesser General Public\n * License as published by the Free Software Foundation; either\n * version 3 of the License, or (at your option) any later version.\n */"
@@ -44,6 +40,13 @@ runs:
             # Get current header
             HEADER_LINES=$(echo -e "$HEADER" | wc -l)
             CURRENT_HEADER=$(head -n $HEADER_LINES "$file")
+            
+            # Skip if header matches template ignoring year
+            HEADER_CAN=$(echo "$HEADER" | sed -E 's/(Copyright \(C\) )[0-9]{4}/\1####/')
+            CURRENT_CAN=$(echo "$CURRENT_HEADER" | sed -E 's/(Copyright \(C\) )[0-9]{4}/\1####/')
+            if [ "$HEADER_CAN" = "$CURRENT_CAN" ]; then
+              continue
+            fi
             
             if [ "$HEADER" != "$CURRENT_HEADER" ]; then
               if [ "${{ inputs.mode }}" = "fix" ]; then
