--- a/.github/actions/code-style/header-fixer/action.yml
+++ b/.github/actions/code-style/header-fixer/action.yml
@@ -4,7 +4,7 @@ inputs:
   mode:
     description: "Operation mode: fix, check, or soft-check"
     required: false
-    default: "soft-check"
+    default: "check"
 runs:
   using: "composite"
   steps:
@@ -14,6 +14,8 @@ runs:
         GITHUB_EVENT_NAME: ${{ github.event_name }}
         GITHUB_EVENT_PATH: ${{ github.event_path }}
       run: |
+        set -x
+        echo "Header Fixer Debug: mode=${{ inputs.mode }}, event=$GITHUB_EVENT_NAME"
         # Determine files to process: changed in PR or all .cs in src/
         if [ "$GITHUB_EVENT_NAME" = "pull_request" ] && [ -f "$GITHUB_EVENT_PATH" ]; then
           BASE_SHA=$(jq -r .pull_request.base.sha < "$GITHUB_EVENT_PATH")
@@ -23,6 +25,7 @@ runs:
           # Fallback to all .cs files under src/
           FILES=$(find src -type f -name '*.cs')
         fi
+        echo "Files to process: $FILES"
         # If no files, skip
         if [ -z "$FILES" ]; then
           echo "No C# files to process"
@@ -34,7 +37,8 @@ runs:
           if [ -f "$file" ]; then
 
             # Get year
-            year=$(grep -m1 '^ \* Copyright' "$file" | grep -oE '[0-9]{4}')
+            year=$(grep -m1 '^ \* Copyright' "$file" | grep -oE '[0-9]{4}' || true)
+            echo "Extracted year for $file: $year"
             [ -z "$year" ] && year=$(date +%Y)
             
             # Header template lines
@@ -52,6 +56,7 @@ runs:
             HEADER_LINE_COUNT=${#HEADER_LINES_ARRAY[@]}
 
             # Compare header per-line ignoring year
+            echo "Comparing header for $file"
             mismatch=0
             for ((i=0; i<HEADER_LINE_COUNT; i++)); do
               TEMPLATE_LINE=${HEADER_LINES_ARRAY[i]}
@@ -61,6 +66,7 @@ runs:
               if [[ "$TEMPLATE_CAN" != "$CURRENT_CAN" ]]; then mismatch=1; break; fi
             done
             
+            echo "Header mismatch flag for $file: $mismatch"
             # Process header mismatch
             if (( mismatch == 1 )); then
               if [ "${{ inputs.mode }}" = "fix" ]; then
